--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -36,10 +36,11 @@
               </div>
             </div>
           </div>
-          <a class="descargar btn btn-link text-decoration-none px-4 fw-bold rounded-4 fs-5 fs-md-3 mt-3 mt-md-4"
-            style="letter-spacing: 0.2rem; text-shadow: 2px 2px 0 rgb(138, 141, 0); border: solid 0.1rem yellow; padding-top: 0.3rem; padding-bottom: 0.5rem;"
+          <a class="descargar btn btn-link text-decoration-none px-4 fw-bold rounded-4 fs-5 fs-md-2 mt-3 mt-md-4"
+            style="letter-spacing: 0.2rem; text-shadow: 2px 2px 0 rgb(138, 141, 0); border: solid 0.1rem yellow; padding-top: 0.4rem; padding-bottom: 0.6rem;"
             [routerLink]="['/series', serie.slug]">
-            DESCARGA AQUI
+            VER MÁS
+            <!-- DESCARGA AQUI -->
           </a>
         </div>
       </div>
@@ -59,7 +60,7 @@
     <img src="general/youtube.png" alt="Canal" style="width: auto; height: 2.6rem;">
     <span>Youtube</span>
   </div>
-  <div class="d-flex justify-content-center align-items-center mt-4 gap-3 text-light fw-bold fs-2" style="letter-spacing: 0.2rem;">
+  <div class="d-flex justify-content-center align-items-center mt-4 mb-5 gap-3 text-light fw-bold fs-2" style="letter-spacing: 0.2rem;">
     <img src="general/canal.jpg" class="canal rounded-circle me-2" style="border: solid 1px red;" alt="Youtube">
     <a [href]="canalUrl" target="_blank" class="canal-link text-decoration-none text-light pb-2" style="letter-spacing: 0.4rem; font-style: italic;">Luis✪F</a>
   </div>
