--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -55,7 +55,7 @@
     </button>
   </div>
 
-  <div class="d-flex justify-content-center align-items-center mt-5 gap-3 text-light fw-bold fs-2" style="letter-spacing: 0.2rem;">
+  <!-- <div class="d-flex justify-content-center align-items-center mt-5 gap-3 text-light fw-bold fs-2" style="letter-spacing: 0.2rem;">
     <span>Canal</span>
     <img src="general/youtube.png" alt="Canal" style="width: auto; height: 2.6rem;">
     <span>Youtube</span>
@@ -63,6 +63,6 @@
   <div class="d-flex justify-content-center align-items-center mt-4 mb-5 gap-3 text-light fw-bold fs-2" style="letter-spacing: 0.2rem;">
     <img src="general/canal.jpg" class="canal rounded-circle me-2" style="border: solid 1px red;" alt="Youtube">
     <a [href]="canalUrl" target="_blank" class="canal-link text-decoration-none text-light pb-2" style="letter-spacing: 0.4rem; font-style: italic;">Luis✪F</a>
-  </div>
+  </div> -->
 
 </div>
