--- a/src/app/series/series.component.html
+++ b/src/app/series/series.component.html
@@ -1,6 +1,6 @@
 <!-- Contenido -->
 <div id="series" class="container-fluid text-center text-white">
-  <div class="d-flex flex-row flex-wrap flex-lg-nowrap align-items-stretch justify-content-center gap-3 my-4">
+  <!-- <div class="d-flex flex-row flex-wrap flex-lg-nowrap align-items-stretch justify-content-center gap-3 my-4">
     <div class="d-flex align-items-center gap-2 rounded p-2 fw-bold fs-md-5 text-center"
       style="box-shadow: 0px 0px 10px 0px rgba(255, 0, 0, 0.6); border: solid .1rem #ff1e1e; color: #ff1e1e; min-width: 300px;">
       <img style="height: 3.8rem;" src="general/stop.png">
@@ -19,9 +19,9 @@
       <span>Como Descargar las Series Tutorial <a [href]="tutorial" target="_blank">aquí</a></span>
       <img style="height: 3.7rem;" src="general/star.gif">
     </div>
-  </div>
+  </div> -->
 
-  <h5 class="mb-3">Todas tus series favoritas en un mismo lugar.</h5>
+  <h5 class="mt-4 mb-3">Todas tus series favoritas en un mismo lugar.</h5>
   <div class="d-flex flex-wrap justify-content-center align-items-center gap-2">
       <input id="buscar" type="text" class="form-control w-auto" placeholder="Buscar serie..." [(ngModel)]="busqueda"
           (ngModelChange)="filtrarSeries()" />
