--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,12 @@
 <footer>
   <div class="footer-content">
-    <div class="social">
+    <!-- <div class="social">
       <a class="item" *ngFor="let social of redes" [href]="social.url" target="_blank">
         <i [class]="social.icon"></i>
       </a>
-    </div>
+    </div> -->
     <div class="copyright">
-      <span class="lead">© 2023 LuisF Series | Series Para Todos</span>
+      <span class="lead">© {{ currentYear }} LuisF Series | Series Para Todos</span>
     </div>
   </div>
 </footer>
