--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -55,6 +55,35 @@
     </button>
   </div>
 
+  <div class="container-fluid my-5">
+    <div class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto">
+      <div class="d-flex text-light gap-3 align-items-center flex-row">
+        <img src="https://img.freepik.com/vector-gratis/10-mejor-calificacion-fondo-corona-efecto-luz-puntual_1017-54865.jpg"
+        class="rounded-3" style="width: 8rem;">
+        <div>
+          <h4 class="fw-bold" style="color: yellow;">Series populares</h4>
+          <p class="fs-5">Descubre las series que están arrasando y no te puedes perder.</p>
+        </div>
+      </div>
+      <div class="d-flex text-light gap-3 align-items-center flex-row-reverse mt-4">
+        <img src="https://cdn-icons-png.flaticon.com/512/4647/4647490.png"
+        class="rounded-3" style="width: 8rem;">
+        <div>
+          <h4 class="fw-bold" style="color: yellow;">Noticias y curiosidades</h4>
+          <p class="fs-5">Entérate de lo último en el mundo de las series: entrevistas, adelantos y secretos detrás de cámaras.</p>
+        </div>
+      </div>
+      <div class="d-flex text-light gap-3 align-items-center flex-row mt-4">
+        <img src="https://cdn-icons-png.flaticon.com/512/3295/3295314.png"
+        class="rounded-3" style="width: 8rem;">
+        <div>
+          <h4 class="fw-bold" style="color: yellow;">Comunidad</h4>
+          <p class="fs-5">Interactua con otros usuarios y comparte tus series favoritas.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- <div class="d-flex justify-content-center align-items-center mt-5 gap-3 text-light fw-bold fs-2" style="letter-spacing: 0.2rem;">
     <span>Canal</span>
     <img src="general/youtube.png" alt="Canal" style="width: auto; height: 2.6rem;">
